# cookiecutter-python-project

./: README.md  cookiecutter.json
{{cookiecutter.project}}/: Makefile  README.md  pyproject.toml  sourceme.sh
